# genulens

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  genulens.cpp  genulens_samples.ipynb  option.h  pyproject.toml
.github/workflows/: wheels.yml
.note/: breaking_changes.md  design_plan.md  final_report.md  pre_refactor_uncommitted_status.md  progress_log.md  status.md
.plan/: current_structure.md
apps/: genulens_main.cpp
apps/pre_gapmoe/: calc_mass_dist_main.cpp  calc_murel_dist_main.cpp  calc_rho_profile_main.cpp
docs/: README.md  architecture.md  extinction.md  index.md  isochrone_systematics.md  pre_gapmoe.md  python_api.md  quickstart.md  rate_maps.md  releasing.md  source_forward.md
examples/: cli_examples.ipynb  python_binding.ipynb  rate_summary_map.ipynb  source_isochrone_systematics.ipynb  source_isochrone_systematics.py
genulens/: Makefile  Makefile.example  Makefile_GSLpath.example  genulens.cpp
input_files/source_photometry/: README.md  download_manifest.mist_roman.json  download_manifest.mist_ubvriplus.json  external_isochrone_checksums.sha256  isochrone_libraries.json
input_files/source_photometry/parsec_cmd/: CITATION.md  README.md  checksums.sha256  genstars_compatibility.md  requests.json
input_files/source_photometry/parsec_cmd/metallicity_grid/: README.md  checksums.sha256  requests.json
pre_gapmoe/: Makefile  calc_mass_dist.cpp  calc_murel_dist.cpp  calc_rho_profile.cpp  galactic_model.cpp  option.cpp
python/: genulens_pybind.cpp
src/genulens/: constants.hpp  options.cpp  options.hpp  rng.cpp  rng.hpp  types.cpp  types.hpp
src/genulens/io/: input_data.cpp  input_data.hpp  output.cpp  output.hpp
src/genulens/math/: interpolation.cpp  interpolation.hpp  quadrature.cpp  quadrature.hpp
src/genulens/model/: coordinates.cpp  coordinates.hpp  density.cpp  density.hpp  extinction.cpp  extinction.hpp  extinction_map.cpp  extinction_map.hpp  forward_source.cpp  forward_source.hpp  galactic_model.cpp  galactic_model.hpp  isochrone_grid.cpp  isochrone_grid.hpp  isochrone_library.cpp  isochrone_library.hpp  kinematics.cpp  kinematics.hpp  mass_function.cpp  mass_function.hpp  parameters.cpp  parameters.hpp  source_population_prior.cpp  source_population_prior.hpp  stellar_population_model.cpp  stellar_population_model.hpp
src/genulens/simulation/: backend.cpp  backend.hpp  cli.cpp  cli.hpp  density_runtime.cpp  event.hpp  event_reporter.cpp  event_reporter.hpp  event_sampler.cpp  event_sampler.hpp  genulens_backend.cpp  genulens_backend.hpp  genulens_cli.cpp  genulens_cli.hpp  genulens_initializer.cpp  genulens_initializer.hpp  genulens_sampler.cpp  genulens_sampler.hpp  initialize.cpp  initialize.hpp  kinematics_runtime.cpp  legacy_backend.cpp  legacy_backend.hpp  legacy_cli.cpp  legacy_cli.hpp  legacy_genulens.cpp  likelihood.cpp  likelihood.hpp  los_density_grid.cpp  los_density_grid.hpp  mass_function.cpp  mass_function.hpp  math_runtime.cpp  observation_config.cpp  observation_config.hpp  observation_likelihood.cpp  observation_likelihood.hpp  observation_runtime.cpp  prepared_simulation.cpp  prepared_simulation.hpp  (+15 more)
src/genulens/simulation/internal/: runtime.hpp
src/genulens/tools/: mass_dist.cpp  mass_dist.hpp  murel_dist.cpp  murel_dist.hpp  rho_profile.cpp  rho_profile.hpp
src/genulens/tools/pre_gapmoe/: calc_mass_dist.cpp  calc_murel_dist.cpp  calc_rho_profile.cpp  galactic_kinematics.cpp  galactic_model.cpp  galactic_model.h
tests/smoke/: regression_cli.sh  simple_simulation_test.ipynb  smoke_cli.sh  source_forward_comparison_test.ipynb  source_isochrone_systematics_smoke.py  source_isochrone_systematics_test.ipynb  test_genulens_source_compat.py  test_python.py
tests/unit/: test_core.cpp
third_party_licenses/: GSL.md
tools/source_photometry/: build_external_isochrone_aggregates.py  fetch_isochrone_assets.py  fetch_parsec_cmd_metallicity_grid.py  fetch_parsec_cmd_tables.py  normalize_isochrone_table.py  validate_genstars_compatibility.py
