[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.10", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "genulens"
version = "0.0.0"
description = "Python bindings for the genulens shared C++ core"
requires-python = ">=3.9"
dependencies = ["numpy"]

[tool.scikit-build]
cmake.build-type = "Release"

